lib/BCCParser.js
// Generated from grammars/BCC.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BCCListener = require('./BCCListener').BCCListener;
var BCCVisitor = require('./BCCVisitor').BCCVisitor;

var grammarFileName = "BCC.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'true'", "'false'", "'num'", "'bool'", "':'", 
                     "','", "';'", "':='", "'('", "')'", "'<'", "'<='", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'!='", "'=='", 
                     "'>'", "'>='", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'++'", "'--'", "'function'", "'var'", "'print'", 
                     "'input'", "'when'", "'do'", "'if'", "'else'", "'unless'", 
                     "'while'", "'return'", "'until'", "'loop'", "'repeat'", 
                     "'for'", "'end'", "'next'", "'break'", "'and'", "'or'", 
                     "'not'" ];

var symbolicNames = [ null, null, null, null, null, "TK_DOSPUNTOS", "TK_COMA", 
                      "TK_PUNTOYCOMA", "TK_ASIGNACION", "TK_PAR_IZQ", "TK_PAR_DER", 
                      "TK_MENOR", "TK_MENOR_IGUAL", "TK_SUM_ASIG", "TK_RES_ASIG", 
                      "TK_MUL_ASIG", "TK_DIV_ASIG", "TK_MOD_ASIG", "TK_DIFERENTE", 
                      "TK_IGUALDAD", "TK_MAYOR", "TK_MAYOR_IGUAL", "TK_LLAVE_IZQ", 
                      "TK_LLAVE_DER", "TK_MAS", "TK_MENOS", "TK_MUL", "TK_DIV", 
                      "TK_MOD", "TK_INCREMENTO", "TK_DECREMENTO", "FUNCTION", 
                      "VAR", "PRINT", "INPUT", "WHEN", "DO", "IF", "ELSE", 
                      "UNLESS", "WHILE", "RETURN", "UNTIL", "LOOP", "REPEAT", 
                      "FOR", "END", "NEXT", "BREAK", "AND", "OR", "NOT", 
                      "NUM", "FID", "ID", "WS", "COMMENT" ];

var ruleNames =  [ "prog", "varDecl", "fndeclList", "stmtBlock", "stmt", 
                   "lexpr", "nexpr", "rexpr", "simpleExpr", "term", "factor", 
                   "mainProg", "bool", "datatype" ];

function BCCParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BCCParser.prototype = Object.create(antlr4.Parser.prototype);
BCCParser.prototype.constructor = BCCParser;

Object.defineProperty(BCCParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BCCParser.EOF = antlr4.Token.EOF;
BCCParser.T__0 = 1;
BCCParser.T__1 = 2;
BCCParser.T__2 = 3;
BCCParser.T__3 = 4;
BCCParser.TK_DOSPUNTOS = 5;
BCCParser.TK_COMA = 6;
BCCParser.TK_PUNTOYCOMA = 7;
BCCParser.TK_ASIGNACION = 8;
BCCParser.TK_PAR_IZQ = 9;
BCCParser.TK_PAR_DER = 10;
BCCParser.TK_MENOR = 11;
BCCParser.TK_MENOR_IGUAL = 12;
BCCParser.TK_SUM_ASIG = 13;
BCCParser.TK_RES_ASIG = 14;
BCCParser.TK_MUL_ASIG = 15;
BCCParser.TK_DIV_ASIG = 16;
BCCParser.TK_MOD_ASIG = 17;
BCCParser.TK_DIFERENTE = 18;
BCCParser.TK_IGUALDAD = 19;
BCCParser.TK_MAYOR = 20;
BCCParser.TK_MAYOR_IGUAL = 21;
BCCParser.TK_LLAVE_IZQ = 22;
BCCParser.TK_LLAVE_DER = 23;
BCCParser.TK_MAS = 24;
BCCParser.TK_MENOS = 25;
BCCParser.TK_MUL = 26;
BCCParser.TK_DIV = 27;
BCCParser.TK_MOD = 28;
BCCParser.TK_INCREMENTO = 29;
BCCParser.TK_DECREMENTO = 30;
BCCParser.FUNCTION = 31;
BCCParser.VAR = 32;
BCCParser.PRINT = 33;
BCCParser.INPUT = 34;
BCCParser.WHEN = 35;
BCCParser.DO = 36;
BCCParser.IF = 37;
BCCParser.ELSE = 38;
BCCParser.UNLESS = 39;
BCCParser.WHILE = 40;
BCCParser.RETURN = 41;
BCCParser.UNTIL = 42;
BCCParser.LOOP = 43;
BCCParser.REPEAT = 44;
BCCParser.FOR = 45;
BCCParser.END = 46;
BCCParser.NEXT = 47;
BCCParser.BREAK = 48;
BCCParser.AND = 49;
BCCParser.OR = 50;
BCCParser.NOT = 51;
BCCParser.NUM = 52;
BCCParser.FID = 53;
BCCParser.ID = 54;
BCCParser.WS = 55;
BCCParser.COMMENT = 56;

BCCParser.RULE_prog = 0;
BCCParser.RULE_varDecl = 1;
BCCParser.RULE_fndeclList = 2;
BCCParser.RULE_stmtBlock = 3;
BCCParser.RULE_stmt = 4;
BCCParser.RULE_lexpr = 5;
BCCParser.RULE_nexpr = 6;
BCCParser.RULE_rexpr = 7;
BCCParser.RULE_simpleExpr = 8;
BCCParser.RULE_term = 9;
BCCParser.RULE_factor = 10;
BCCParser.RULE_mainProg = 11;
BCCParser.RULE_bool = 12;
BCCParser.RULE_datatype = 13;


function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCCParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.mainProg = function() {
    return this.getTypedRuleContext(MainProgContext,0);
};

ProgContext.prototype.fndeclList = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FndeclListContext);
    } else {
        return this.getTypedRuleContext(FndeclListContext,i);
    }
};

ProgContext.prototype.EOF = function() {
    return this.getToken(BCCParser.EOF, 0);
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.exitProg(this);
	}
};

ProgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCCVisitor ) {
        return visitor.visitProg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCCParser.ProgContext = ProgContext;

BCCParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BCCParser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.state = 36;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case BCCParser.TK_INCREMENTO:
        case BCCParser.TK_DECREMENTO:
        case BCCParser.FUNCTION:
        case BCCParser.VAR:
        case BCCParser.PRINT:
        case BCCParser.INPUT:
        case BCCParser.WHEN:
        case BCCParser.DO:
        case BCCParser.IF:
        case BCCParser.UNLESS:
        case BCCParser.WHILE:
        case BCCParser.RETURN:
        case BCCParser.UNTIL:
        case BCCParser.LOOP:
        case BCCParser.REPEAT:
        case BCCParser.FOR:
        case BCCParser.END:
        case BCCParser.NEXT:
        case BCCParser.BREAK:
        case BCCParser.ID:
            this.enterOuterAlt(localctx, 1);
            this.state = 31;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BCCParser.FUNCTION) {
                this.state = 28;
                this.fndeclList();
                this.state = 33;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 34;
            this.mainProg();
            break;
        case BCCParser.EOF:
            this.enterOuterAlt(localctx, 2);
            this.state = 35;
            this.match(BCCParser.EOF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCCParser.RULE_varDecl;
    return this;
}

VarDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclContext.prototype.constructor = VarDeclContext;

VarDeclContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCCParser.ID);
    } else {
        return this.getToken(BCCParser.ID, i);
    }
};


VarDeclContext.prototype.TK_DOSPUNTOS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCCParser.TK_DOSPUNTOS);
    } else {
        return this.getToken(BCCParser.TK_DOSPUNTOS, i);
    }
};


VarDeclContext.prototype.datatype = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DatatypeContext);
    } else {
        return this.getTypedRuleContext(DatatypeContext,i);
    }
};

VarDeclContext.prototype.TK_COMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCCParser.TK_COMA);
    } else {
        return this.getToken(BCCParser.TK_COMA, i);
    }
};


VarDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.enterVarDecl(this);
	}
};

VarDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.exitVarDecl(this);
	}
};

VarDeclContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCCVisitor ) {
        return visitor.visitVarDecl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCCParser.VarDeclContext = VarDeclContext;

BCCParser.prototype.varDecl = function() {

    var localctx = new VarDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, BCCParser.RULE_varDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 38;
        this.match(BCCParser.ID);
        this.state = 39;
        this.match(BCCParser.TK_DOSPUNTOS);
        this.state = 40;
        this.datatype();
        this.state = 47;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BCCParser.TK_COMA) {
            this.state = 41;
            this.match(BCCParser.TK_COMA);
            this.state = 42;
            this.match(BCCParser.ID);
            this.state = 43;
            this.match(BCCParser.TK_DOSPUNTOS);
            this.state = 44;
            this.datatype();
            this.state = 49;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FndeclListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCCParser.RULE_fndeclList;
    return this;
}

FndeclListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FndeclListContext.prototype.constructor = FndeclListContext;

FndeclListContext.prototype.FUNCTION = function() {
    return this.getToken(BCCParser.FUNCTION, 0);
};

FndeclListContext.prototype.FID = function() {
    return this.getToken(BCCParser.FID, 0);
};

FndeclListContext.prototype.TK_DOSPUNTOS = function() {
    return this.getToken(BCCParser.TK_DOSPUNTOS, 0);
};

FndeclListContext.prototype.datatype = function() {
    return this.getTypedRuleContext(DatatypeContext,0);
};

FndeclListContext.prototype.TK_PAR_IZQ = function() {
    return this.getToken(BCCParser.TK_PAR_IZQ, 0);
};

FndeclListContext.prototype.TK_PAR_DER = function() {
    return this.getToken(BCCParser.TK_PAR_DER, 0);
};

FndeclListContext.prototype.stmtBlock = function() {
    return this.getTypedRuleContext(StmtBlockContext,0);
};

FndeclListContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};

FndeclListContext.prototype.VAR = function() {
    return this.getToken(BCCParser.VAR, 0);
};

FndeclListContext.prototype.TK_PUNTOYCOMA = function() {
    return this.getToken(BCCParser.TK_PUNTOYCOMA, 0);
};

FndeclListContext.prototype.enterRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.enterFndeclList(this);
	}
};

FndeclListContext.prototype.exitRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.exitFndeclList(this);
	}
};

FndeclListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCCVisitor ) {
        return visitor.visitFndeclList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCCParser.FndeclListContext = FndeclListContext;

BCCParser.prototype.fndeclList = function() {

    var localctx = new FndeclListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BCCParser.RULE_fndeclList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        this.match(BCCParser.FUNCTION);
        this.state = 51;
        this.match(BCCParser.FID);
        this.state = 52;
        this.match(BCCParser.TK_DOSPUNTOS);
        this.state = 53;
        this.datatype();
        this.state = 54;
        this.match(BCCParser.TK_PAR_IZQ);
        this.state = 56;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===BCCParser.ID) {
            this.state = 55;
            this.varDecl();
        }

        this.state = 58;
        this.match(BCCParser.TK_PAR_DER);
        this.state = 63;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===BCCParser.VAR) {
            this.state = 59;
            this.match(BCCParser.VAR);
            this.state = 60;
            this.varDecl();
            this.state = 61;
            this.match(BCCParser.TK_PUNTOYCOMA);
        }

        this.state = 65;
        this.stmtBlock();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StmtBlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCCParser.RULE_stmtBlock;
    return this;
}

StmtBlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtBlockContext.prototype.constructor = StmtBlockContext;

StmtBlockContext.prototype.TK_LLAVE_IZQ = function() {
    return this.getToken(BCCParser.TK_LLAVE_IZQ, 0);
};

StmtBlockContext.prototype.TK_LLAVE_DER = function() {
    return this.getToken(BCCParser.TK_LLAVE_DER, 0);
};

StmtBlockContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

StmtBlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.enterStmtBlock(this);
	}
};

StmtBlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.exitStmtBlock(this);
	}
};

StmtBlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCCVisitor ) {
        return visitor.visitStmtBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCCParser.StmtBlockContext = StmtBlockContext;

BCCParser.prototype.stmtBlock = function() {

    var localctx = new StmtBlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BCCParser.RULE_stmtBlock);
    var _la = 0; // Token type
    try {
        this.state = 76;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case BCCParser.TK_LLAVE_IZQ:
            this.enterOuterAlt(localctx, 1);
            this.state = 67;
            this.match(BCCParser.TK_LLAVE_IZQ);
            this.state = 69; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 68;
                this.stmt();
                this.state = 71; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (BCCParser.TK_INCREMENTO - 29)) | (1 << (BCCParser.TK_DECREMENTO - 29)) | (1 << (BCCParser.PRINT - 29)) | (1 << (BCCParser.INPUT - 29)) | (1 << (BCCParser.WHEN - 29)) | (1 << (BCCParser.DO - 29)) | (1 << (BCCParser.IF - 29)) | (1 << (BCCParser.UNLESS - 29)) | (1 << (BCCParser.WHILE - 29)) | (1 << (BCCParser.RETURN - 29)) | (1 << (BCCParser.UNTIL - 29)) | (1 << (BCCParser.LOOP - 29)) | (1 << (BCCParser.REPEAT - 29)) | (1 << (BCCParser.FOR - 29)) | (1 << (BCCParser.NEXT - 29)) | (1 << (BCCParser.BREAK - 29)) | (1 << (BCCParser.ID - 29)))) !== 0));
            this.state = 73;
            this.match(BCCParser.TK_LLAVE_DER);
            break;
        case BCCParser.TK_INCREMENTO:
        case BCCParser.TK_DECREMENTO:
        case BCCParser.PRINT:
        case BCCParser.INPUT:
        case BCCParser.WHEN:
        case BCCParser.DO:
        case BCCParser.IF:
        case BCCParser.UNLESS:
        case BCCParser.WHILE:
        case BCCParser.RETURN:
        case BCCParser.UNTIL:
        case BCCParser.LOOP:
        case BCCParser.REPEAT:
        case BCCParser.FOR:
        case BCCParser.NEXT:
        case BCCParser.BREAK:
        case BCCParser.ID:
            this.enterOuterAlt(localctx, 2);
            this.state = 75;
            this.stmt();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BCCParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;

StmtContext.prototype.PRINT = function() {
    return this.getToken(BCCParser.PRINT, 0);
};

StmtContext.prototype.lexpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LexprContext);
    } else {
        return this.getTypedRuleContext(LexprContext,i);
    }
};

StmtContext.prototype.TK_PUNTOYCOMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BCCParser.TK_PUNTOYCOMA);
    } else {
        return this.getToken(BCCParser.TK_PUNTOYCOMA, i);
    }
};


StmtContext.prototype.INPUT = function() {
    return this.getToken(BCCParser.INPUT, 0);
};

StmtContext.prototype.ID = function() {
    return this.getToken(BCCParser.ID, 0);
};

StmtContext.prototype.WHEN = function() {
    return this.getToken(BCCParser.WHEN, 0);
};

StmtContext.prototype.TK_PAR_IZQ = function() {
    return this.getToken(BCCParser.TK_PAR_IZQ, 0);
};

StmtContext.prototype.TK_PAR_DER = function() {
    return this.getToken(BCCParser.TK_PAR_DER, 0);
};

StmtContext.prototype.DO = function() {
    return this.getToken(BCCParser.DO, 0);
};

StmtContext.prototype.stmtBlock = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtBlockContext);
    } else {
        return this.getTypedRuleContext(StmtBlockContext,i);
    }
};

StmtContext.prototype.IF = function() {
    return this.getToken(BCCParser.IF, 0);
};

StmtContext.prototype.ELSE = function() {
    return this.getToken(BCCParser.ELSE, 0);
};

StmtContext.prototype.UNLESS = function() {
    return this.getToken(BCCParser.UNLESS, 0);
};

StmtContext.prototype.WHILE = function() {
    return this.getToken(BCCParser.WHILE, 0);
};

StmtContext.prototype.RETURN = function() {
    return this.getToken(BCCParser.RETURN, 0);
};

StmtContext.prototype.UNTIL = function() {
    return this.getToken(BCCParser.UNTIL, 0);
};

StmtContext.prototype.LOOP = function() {
    return this.getToken(BCCParser.LOOP, 0);
};

StmtContext.prototype.REPEAT = function() {
    return this.getToken(BCCParser.REPEAT, 0);
};

StmtContext.prototype.NUM = function() {
    return this.getToken(BCCParser.NUM, 0);
};

StmtContext.prototype.TK_DOSPUNTOS = function() {
    return this.getToken(BCCParser.TK_DOSPUNTOS, 0);
};

StmtContext.prototype.FOR = function() {
    return this.getToken(BCCParser.FOR, 0);
};

StmtContext.prototype.NEXT = function() {
    return this.getToken(BCCParser.NEXT, 0);
};

StmtContext.prototype.BREAK = function() {
    return this.getToken(BCCParser.BREAK, 0);
};

StmtContext.prototype.TK_ASIGNACION = function() {
    return this.getToken(BCCParser.TK_ASIGNACION, 0);
};

StmtContext.prototype.TK_SUM_ASIG = function() {
    return this.getToken(BCCParser.TK_SUM_ASIG, 0);
};

StmtContext.prototype.TK_RES_ASIG = function() {
    return this.getToken(BCCParser.TK_RES_ASIG, 0);
};

StmtContext.prototype.TK_MUL_ASIG = function() {
    return this.getToken(BCCParser.TK_MUL_ASIG, 0);
};

StmtContext.prototype.TK_DIV_ASIG = function() {
    return this.getToken(BCCParser.TK_DIV_ASIG, 0);
};

StmtContext.prototype.TK_MOD_ASIG = function() {
    return this.getToken(BCCParser.TK_MOD_ASIG, 0);
};

StmtContext.prototype.TK_INCREMENTO = function() {
    return this.getToken(BCCParser.TK_INCREMENTO, 0);
};

StmtContext.prototype.TK_DECREMENTO = function() {
    return this.getToken(BCCParser.TK_DECREMENTO, 0);
};

StmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.enterStmt(this);
	}
};

StmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof BCCListener ) {
        listener.exitStmt(this);
	}
};

StmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BCCVisitor ) {
        return visitor.visitStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BCCParser.StmtContext = StmtContext;

BCCParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, BCCParser.RULE_stmt);
    try {
        this.state = 203;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 78;
            this.match(BCCParser.PRINT);
            this.state = 79;
            this.lexpr();
            this.state = 80;
            this.match(BCCParser.TK_PUNTOYCOMA);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 82;
            this.match(BCCParser.INPUT);
            this.state = 83;
            this.match(BCCParser.ID);
            this.state = 84;
            this.match(BCCParser.TK_PUNTOYCOMA);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 85;
            this.match(BCCParser.WHEN);
            this.state = 86;
            this.match(BCCParser.TK_PAR_IZQ);
            this.state = 87;
            this.lexpr();
            this.state = 88;
            this.match(BCCParser.TK_PAR_DER);
            this.state = 89;
            this.match(BCCParser.DO);
            this.state = 90;
            this.stmtBlock();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 92;
            this.match(BCCParser.IF);
            this.state = 93;
            this.match(BCCParser.TK_PAR_IZQ);
            this.state = 94;
            this.lexpr();
            this.state = 95;
            this.match(BCCParser.TK_PAR_DER);
            this.state = 96;
            this.match(BCCParser.DO);
            this.state = 97;
            this.stmtBlock();
            this.state = 98;
            this.match(BCCParser.ELSE);
            this.state = 99;
            this.stmtBlock();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 101;
            this.match(BCCParser.UNLESS);
            this.state = 102;
            this.match(BCCParser.TK_PAR_IZQ);
            this.state = 103;
            this.lexpr();
            this.state = 104;
            this.match(BCCParser.TK_PAR_DER);
            this.state = 105;
            this.match(BCCParser.DO);
            this.state = 106;
            this.stmtBlock();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 108;
            this.match(BCCParser.WHILE);
            this.state = 109;
            this.match(BCCParser.TK_PAR_IZQ);
            this.state = 110;
            this.lexpr();
            this.state = 111;
            this.match(BCCParser.TK_PAR_DER);
            this.state = 112;
            this.match(BCCParser.DO);
            this.state = 113;
            this.stmtBlock();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 115;
            this.match(BCCParser.RETURN);
            this.state = 116;
            this.lexpr();
            this.state = 117;
            this.match(BCCParser.TK_PUNTOYCOMA);
            break;
